--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,15 @@
   "author": "Saurabh Mhatre",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.1.5",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
-    "mysql": "^2.13.0"
+    "multer": "^1.3.0",
+    "mysql": "^2.13.0",
+    "node-cmd": "^2.0.0",
+    "node-session": "^1.2.1",
+    "promise": "^7.1.1",
+    "rmfr": "^1.0.2"
   }
 }
