--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,10 @@
   "dependencies": {
     "axios": "^0.15.3",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-dropzone": "^3.10.0",
+    "react-file-tree": "0.0.8",
+    "superagent": "^3.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
