--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
-  "private": true,
-  "devDependencies": {
-    "react-scripts": "0.8.5"
-  },
-  "dependencies": {
-    "axios": "^0.15.3",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-dropzone": "^3.10.0",
-    "react-file-tree": "0.0.8",
-    "react-router-dom": "^4.0.0",
-    "superagent": "^3.4.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "name": "frontend",
+    "version": "0.1.0",
+    "private": true,
+    "devDependencies": {
+        "material-ui": "^0.18.7",
+        "react-scripts": "0.8.5",
+        "react-tap-event-plugin": "^2.0.1"
+    },
+    "dependencies": {
+        "axios": "^0.15.3",
+        "react": "^15.4.2",
+        "react-dom": "^15.4.2",
+        "react-dropzone": "^3.10.0",
+        "react-file-tree": "0.0.8",
+        "react-router-dom": "^4.0.0",
+        "superagent": "^3.4.4"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
+    }
 }
